k8s/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80 # Adjust port if needed
    targetPort: 80 # Container port
  type: LoadBalancer # Change type (e.g., NodePort) if needed

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx  # Use AWS Load Balancer Controller
spec:
  ingressClassName: nginx
  rules:
  - host: sample.domain.com
    http:
      paths:
      - backend:
          service:
            name: nginx-service
            port:
              number: 80
        pathType: ImplementationSpecific
  # tls:
  # - hosts:
  #   - sample.domain.com
  #   secretName: <secret on default namespace>
